--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  font-family: "Courier New", Courier, monospace;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.map {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.icon {
+  font-size: 2rem;
+  color: red;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.location-info-box {
+  position: absolute;
+  top: 50px;
+  right: 50px;
+  width: 300px;
+  min-height: 200px;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.5);
   color: white;
+  font-size: 15px;
+  border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.location-info-box ul {
+  list-style: none;
+  padding: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.location-info-box li {
+  padding: 10px;
+}
+.header {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  background-color: rgb(88, 2, 38);
+  text-align: center;
+  z-index: 100;
+}
+.header h2 {
+  margin: 0;
+  color: white;
+  padding: 10px;
 }
